force-app/main/default/objects/Program_Support_Item__c/Program_Support_Item__c.object-meta.xml
<CustomObject>
    <description>Allows for Support Items to be linked to Funding Programs for the purpose of tallying appropriate delivered services</description>
    <label>Program Support Item</label>
    <nameField>
        <displayFormat>FPP - {00000}</displayFormat>
        <label>Program Support Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Support Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>