force-app/main/default/objects/Program_Support_Item__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Program Support Items</relationshipLabel>
    <relationshipName>Program_Support_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>