force-app/main/default/objects/Program_Support_Item__c/fields/Funding_Program_Priority__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program_Priority__c</fullName>
    <formula>Funding_Program__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Program Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>