force-app/main/default/objects/Program_Support_Item__c/fields/Support_Item__c.field-meta.xml
<CustomField>
    <fullName>Support_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Item</label>
    <referenceTo>maica_cc__Support_Item__c</referenceTo>
    <relationshipLabel>Funding Programs</relationshipLabel>
    <relationshipName>Program_Support_Items</relationshipName>
    <type>Lookup</type>
</CustomField>